// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeroBanner /> should render maximal 1`] = `
.c2 {
  font-family: "Krana Fat";
  font-size: 3.75rem;
  line-height: 1;
}

.c3 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-weight: 700;
}

.c5 {
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
}

.c1 {
  color: rgb(248, 207, 169);
  display: flex;
  flex-direction: column;
  gap: 3rem;
  padding: 1.75rem;
}

.c0 {
  background: rgb(0, 98, 114);
  height: 100vh;
  grid-column: 1/-1;
  padding-top: 3.75rem;
  display: flex;
  flex-direction: column;
}

@media (min-width: 1200px) {
  .c2 {
    font-size: 6rem;
    line-height: 1;
  }
}

@media (min-width: 1200px) {
  .c1 {
    width: 50%;
    padding: 3.75rem;
    align-items: flex-start;
    justify-content: center;
  }

  .c1 .c4 {
    margin-top: 3rem;
  }
}

@media (min-width: 1200px) {
  .c6 {
    width: 50%;
  }
}

@media (min-width: 1200px) {
  .c6 {
    background-image: linear-gradient(rgba(0, 98, 114, 0.7), rgba(0, 98, 114, 0.7)),url(https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg);
    background-size: cover;
  }
}

@media (min-width: 1200px) {
  .c0 {
    height: 45rem;
    flex-direction: row-reverse;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1
      class="c2"
    >
      Test Title
    </h1>
    <p
      class="c3"
    >
      Sub test sub title
    </p>
    <h2
      class="c4 c5"
    >
      Secondary test secondary title
    </h2>
  </div>
  <div
    class="c6"
  />
</div>
`;

exports[`<HeroBanner /> should render minimal 1`] = `
.c2 {
  font-family: "Krana Fat";
  font-size: 3.75rem;
  line-height: 1;
}

.c1 {
  color: rgb(248, 207, 169);
  display: flex;
  flex-direction: column;
  gap: 3rem;
  padding: 1.75rem;
}

.c0 {
  background: rgb(0, 98, 114);
  height: 100vh;
  grid-column: 1/-1;
  padding-top: 3.75rem;
  display: flex;
  flex-direction: column;
}

@media (min-width: 1200px) {
  .c2 {
    font-size: 6rem;
    line-height: 1;
  }
}

@media (min-width: 1200px) {
  .c1 {
    width: 50%;
    padding: 3.75rem;
    align-items: flex-start;
    justify-content: center;
  }
}

@media (min-width: 1200px) {
  .c3 {
    width: 50%;
  }
}

@media (min-width: 1200px) {
  .c0 {
    height: 45rem;
    flex-direction: row-reverse;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1
      class="c2"
    >
      Test Title
    </h1>
  </div>
  <div
    class="c3"
  />
</div>
`;
